# Jira

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  gemini_llm.py  llm_interface.py  package-lock.json  package.json  prompts.py  requirements.txt  review.py
.github/scripts/: review-with-gemini.js  review-with-gemini.mjs
.github/workflows/: code-review.yml  gemini-review.yml
Backend/: Dockerfile  manage.py  requirements.in  requirements.txt  requirements_tests.in  requirements_tests.txt
Backend/Jira/: asgi.py  settings.py  wsgi.py
backend/: .dockerignore  Dockerfile  async_cron_task.py  cronfile  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  sync_cron_task.py
backend/boards/: models.py  serializers.py  urls.py  utils.py  views.py
backend/boards/migrations/: 0001_initial.py  0002_alter_column_options_alter_task_options_and_more.py  0003_remove_task_comments_comment.py  0004_task_author_task_updated_at.py  0005_remove_task_assignee.py
backend/cron/: cronfile  entrypoint.sh
backend/jira/: asgi.py  settings.py  urls.py  wsgi.py
backend/projects/: github_auth.py  models.py  serializers.py  utils.py  views.py
backend/projects/migrations/: 0001_initial.py
backend/static/drf_spectacular_sidecar/redoc/bundles/: redoc.standalone.js  redoc.standalone.js.map
backend/swagger/: async_user_view.py
backend/tests/: .coveragerc  test_auth_views.py  test_config.py  test_serializer.py  test_user.py  test_websocket.py
backend/users/: serializers.py  views.py  views_auth.py
backend/users/management/commands/: async_cron_task.py  sync_cron_task.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  webpack.config.js
frontend/src/: index.js
frontend/src/api/: axios.js
frontend/src/app/: App.js
frontend/src/boards/: AddNewTask.js  AddTaskToggle.js  Board.js  Boards.js  Column.js  CommentEditor.js  EditTaskModal.js  TaskCard.js  style.css
frontend/src/components/: ResetPasswordForm.js
frontend/src/create_user/: createUser.js
frontend/src/hooks/: DeleteModalContext.js  HoveredBoardContext.js  HoveredEntityContext.js  useEntityManager.js  useOutsideClickMenu.js  useProjectBoards.js  useProjects.js
frontend/src/list_users/: ListUsers.js  listUsers.js
frontend/src/main_page/: MainPage.js  (+1 more)
nginx/: nginx.conf
(+22 files in other folders)
